// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ActionList default 1`] = `
<div>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-clock"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.672 0L0 3.06l1.05 1.193 3.634-3.058zm8.656 0l-1.05 1.194 3.672 3.095L16 3.06 12.328 0zM7.98 1.68a6.953 6.953 0 0 0-5.096 2.126A6.795 6.795 0 0 0 .787 8.877a6.713 6.713 0 0 0 2.098 5.035A7.065 7.065 0 0 0 7.981 16a7.065 7.065 0 0 0 5.097-2.088 6.854 6.854 0 0 0 2.098-5.035 6.938 6.938 0 0 0-2.098-5.072A6.952 6.952 0 0 0 7.98 1.679zm0 1.603a5.539 5.539 0 0 1 3.972 1.641 5.341 5.341 0 0 1 1.65 3.916 5.425 5.425 0 0 1-1.65 3.953 5.538 5.538 0 0 1-3.972 1.641 5.415 5.415 0 0 1-3.972-1.64A5.39 5.39 0 0 1 2.4 8.838a5.306 5.306 0 0 1 1.61-3.916 5.415 5.415 0 0 1 3.972-1.64zM7 5v5l3 1 1-1-3-1V5z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-star"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 0l2.5 5 5.5.8-4 3.9.9 5.5L8 12.6l-4.9 2.6.9-5.5-4-3.9L5.5 5z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-badge"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9l-4 4h3v3l4-5c-.215-.117-3-2-3-2zm8 0s-2.881 1.906-3 2l4 5v-3h3zM8-.063l.813.914 1.1-.533.402 1.155 1.22-.071-.07 1.22 1.154.402-.532 1.1.913.813-.913.813.532 1.1-1.155.402.072 1.22-1.221-.07-.402 1.155-1.1-.533L8 9.937l-.813-.913-1.1.533-.402-1.155-1.22.07.07-1.22-1.154-.401.532-1.1L3 4.936l.913-.813-.532-1.1 1.155-.402-.072-1.22 1.221.07.402-1.154 1.1.533z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-expanded"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 2h4v5H1zm5 5h9V2H6zm-5 7h4V9H1zm5 0h9V9H6z"
        />
      </svg>
    </symbol>
  </svg>
  <div
    style={
      Object {
        "background": "#236192",
        "display": "inline-table",
      }
    }
  >
    <ul
      className="nav nav-pills nav-stacked theme-tc-action-list tc-action-list"
    >
      <li
        aria-current={true}
        className="theme-tc-action-list-item tc-action-list-item active theme-active"
        role="presentation"
        title="Recent datasets"
      >
        <button
          className="btn btn-link"
          disabled={false}
          id="context-nav-recent-datasets"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-clock"
            />
          </svg>
          <span>
            Recent datasets
          </span>
        </button>
      </li>
      <li
        className="theme-tc-action-list-item tc-action-list-item"
        role="presentation"
        title="Favorite datasets"
      >
        <button
          className="btn btn-link"
          disabled={false}
          id="context-nav-favorite-datasets"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-star"
            />
          </svg>
          <span>
            Favorite datasets
          </span>
        </button>
      </li>
      <li
        className="theme-tc-action-list-item tc-action-list-item"
        role="presentation"
        title="Certified datasets"
      >
        <button
          className="btn btn-link"
          disabled={false}
          id="context-nav-certified-datasets"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-badge"
            />
          </svg>
          <span>
            Certified datasets
          </span>
        </button>
      </li>
      <li
        className="theme-tc-action-list-item tc-action-list-item"
        role="presentation"
        title="All datasets"
      >
        <button
          className="btn btn-link"
          disabled={false}
          id="context-nav-all-datasets"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-expanded"
            />
          </svg>
          <span>
            All datasets
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots ActionList single 1`] = `
<div>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-clock"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.672 0L0 3.06l1.05 1.193 3.634-3.058zm8.656 0l-1.05 1.194 3.672 3.095L16 3.06 12.328 0zM7.98 1.68a6.953 6.953 0 0 0-5.096 2.126A6.795 6.795 0 0 0 .787 8.877a6.713 6.713 0 0 0 2.098 5.035A7.065 7.065 0 0 0 7.981 16a7.065 7.065 0 0 0 5.097-2.088 6.854 6.854 0 0 0 2.098-5.035 6.938 6.938 0 0 0-2.098-5.072A6.952 6.952 0 0 0 7.98 1.679zm0 1.603a5.539 5.539 0 0 1 3.972 1.641 5.341 5.341 0 0 1 1.65 3.916 5.425 5.425 0 0 1-1.65 3.953 5.538 5.538 0 0 1-3.972 1.641 5.415 5.415 0 0 1-3.972-1.64A5.39 5.39 0 0 1 2.4 8.838a5.306 5.306 0 0 1 1.61-3.916 5.415 5.415 0 0 1 3.972-1.64zM7 5v5l3 1 1-1-3-1V5z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-star"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 0l2.5 5 5.5.8-4 3.9.9 5.5L8 12.6l-4.9 2.6.9-5.5-4-3.9L5.5 5z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-badge"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9l-4 4h3v3l4-5c-.215-.117-3-2-3-2zm8 0s-2.881 1.906-3 2l4 5v-3h3zM8-.063l.813.914 1.1-.533.402 1.155 1.22-.071-.07 1.22 1.154.402-.532 1.1.913.813-.913.813.532 1.1-1.155.402.072 1.22-1.221-.07-.402 1.155-1.1-.533L8 9.937l-.813-.913-1.1.533-.402-1.155-1.22.07.07-1.22-1.154-.401.532-1.1L3 4.936l.913-.813-.532-1.1 1.155-.402-.072-1.22 1.221.07.402-1.154 1.1.533z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-expanded"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 2h4v5H1zm5 5h9V2H6zm-5 7h4V9H1zm5 0h9V9H6z"
        />
      </svg>
    </symbol>
  </svg>
  <div
    style={
      Object {
        "background": "#236192",
        "display": "inline-table",
      }
    }
  >
    <ul
      className="nav nav-pills nav-stacked theme-tc-action-list tc-action-list"
    >
      <li
        aria-current={true}
        className="theme-tc-action-list-item tc-action-list-item active theme-active"
        role="presentation"
        title="Recent datasets"
      >
        <button
          className="btn btn-link"
          disabled={false}
          id="context-nav-recent-datasets"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-clock"
            />
          </svg>
          <span>
            Recent datasets
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;
